     - on_login()
     - on_logout()
     - log_cmd()
     - log_transfer()
   * proto_cmds class attribute has been added.  The FTPHandler class no longer
     relies on "ftpserver.proto_cmds" global dictionary but on
     "ftpserver.FTPHandler.proto_cmds" instead.

 * FTPServer class:
   - max_cons attribute defaults to 512 by default instead of 0 (unlimited).

 * DummyAuthorizer:
   - ValueError exceptions are now raised instead of AuthorizerError.
   - terminate_impersonation() method now expects a "username" parameter.

 * DTPHandler.get_elapsed_time() method has been added.

 * Added a new package in pyftpdlib namespace: "contrib". Modules (and classes)
   defined here:
   - pyftpdlib.contrib.handlers.py (TLS_FTPHandler)
   - pyftpdlib.contrib.authorizers.py (UnixAuthorizer, WindowsAuthorizer)
   - pyftpdlib.contrib.filesystems (UnixFilesystem)

Minor API changes since 0.5.2

 * FTPHandler renamed objects:
   data_server -> _dtp_acceptor
   current_type -> _current_type
   restart_position -> _restart_position
   quit_pending -> _quit_pending
   af -> _af
   on_dtp_connection -> _on_dtp_connection
   on_dtp_close -> _on_dtp_close
   idler -> _idler

 * AbstractedFS.rnfr attribute moved to FTPHandler._rnfr.


Version: 0.5.2 - Date: 2009-09-14
---------------------------------

Enhancements:

 * Issue #103: added unix_daemon.py script.

 * Issue #108: a new ThrottledDTPHandler class has been added for limiting the
   speed of downloads and uploads.

Bugfixes:

 * Issue #100: fixed a race condition in FTPHandler constructor which could
   throw an exception in case of connection bashing (DoS).  (thanks Bram Neijt)

 * Issue #102: FTPServer.close_all() now removes any unfired delayed call left
   behind to prevent potential memory leaks.

 * Issue #104: fixed a bug in FTPServer.handle_accept() where socket.accept()
   could return None instead of a valid address causing the server to crash.
   (OS X only, reported by Wentao Han)
